# css

./: CMakeLists.txt  README.md  assumptions.cpp  assumptions.h  combat.cpp  combat.h  cooldown.cpp  cooldown.h  create_sample_output_wcl.sh  create_sample_outputs.sh  create_sample_outputs_recent.sh  create_top_aq40_speed_horde_useu_logs.sh  create_top_bwl_speed_horde_logs.sh  create_top_bwl_speed_horde_logs_phase4.sh  csv.cpp  csv.h  dps.cpp  dps.h  example_conf.csv  fight_result.cpp  fight_result.h  globals.h  healtarget.h  hps.cpp  hps.h  item.cpp  item.h  item_operations.cpp  item_operations.h  item_picker.cpp  item_picker.h  item_picking_main.cpp  item_picking_main.h  item_table.cpp  item_table.h  leveling.cpp  leveling.h  log_entry.cpp  log_entry.h  main.cpp  (+33 more)
Overheal/: .notes.txt.swp
Overheal/readers/: .read_from_api.py.swp  .read_health_changes_from_api.py.swp  read_from_api.py  read_health_changes_from_api.py
confs/: average_raiding.csv  avg_split_onyxia.csv  bwl_0401.csv  bwl_2020-04-09.csv  bwl_2020-04-09_deficit_change.csv  bwl_2020-04-09_reaction_1s.csv  bwl_2020-04-09_transc8.csv  bwl_log_based_atiy.csv  bwl_log_based_atiy_deficit_change.csv  bwl_log_based_atiy_festival_dumplings.csv  bwl_log_based_atiy_holy.csv  bwl_snipe0.0f  bwl_snipe0.2f  bwl_snipe0.4f  bwl_snipe0.6f  bwl_snipe0.8f  bwl_snipe1.0f  dme_duo.csv  example_conf.csv  our_mc.csv  wcl_bwl_log.csv  wcl_bwl_speed_log.csv
items/: 8pt2.txt  ban_after_mc.txt  ban_after_p4.txt  ban_all_raid.txt  ban_naxx.txt  ban_tmp_phase4.txt  banned.txt  banned_and_onyxia_mc.txt  banned_backs.txt  bwl.txt  hammer_of_grace.txt  have.txt  have_mod_locked.txt  hazz.txt  locked.txt  more.csv  more2.csv  more_noraid.csv  more_raid.csv  not_for_priests.txt  phase5.csv  shadow_pvp_dungeon_rare.csv  start_with.txt
sample_output/: average_raiding.txt  average_split_onyxia.txt  css_2_bwl.txt  css_2_bwl_phase5.txt  css_2_current.txt  css_2_mc_ony.txt  css_2_phase4.txt  css_2_phase5.txt  css_2_pre-raid.txt  css_2_sample1.txt  css_2_sample2.txt  css_2_sample_bwl.txt  css_2_sample_mc_ony.txt  css_2_sample_pre-raid.txt  css_3_bwl.txt  css_3_bwl_phase5.txt  css_3_current.txt  css_3_mc_ony.txt  css_3_phase4.txt  css_3_phase5.txt  css_3_pre-raid.txt  css_3_sample1.txt  css_3_sample2.txt  css_3_sample_bwl.txt  css_3_sample_mc_ony.txt  css_3_sample_pre-raid.txt  css_4_bwl.txt  css_4_bwl_phase5.txt  css_4_current.txt  css_4_mc_ony.txt  css_4_phase4.txt  css_4_phase5.txt  css_4_pre-raid.txt  css_4_sample1.txt  css_4_sample2.txt  css_4_sample_bwl.txt  css_4_sample_mc_ony.txt  css_4_sample_pre-raid.txt  css_5_b_0.2_r_0.3_mc_ony.txt  css_5_bwl.txt  (+21 more)
tests/: CMakeLists.txt  test_set_bonus_calculus.cpp
(+117 files in other folders)
